[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spikes/spikes.png" type="Texture" id=1]
[ext_resource path="res://Spikes/Spikes.gd" type="Script" id=2]
[ext_resource path="res://Spikes/pogo_spike.wav" type="AudioStream" id=3]
[ext_resource path="res://Spikes/spikes_shaking.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 24 )

[node name="Spikes" type="Area2D"]
z_index = 10
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="PogoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.097

[node name="RumbleSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Spikes_body_entered"]
